@@ -1,4 +1,8 @@
 2007-07-18  Benhur Stein <benhur@inf.ufsm.br>
+	* EntityTypeFilter/EntityTypeSelector.m: make ColoredSwitchButtonCell
+	  appear on MacOSX; add missing enumerator method
+
+2007-07-18  Benhur Stein <benhur@inf.ufsm.br>
 	* AggregatingFilter/AggregateValue.[hm]: avoid inter-bundle
 	dependency (derive from PajeEntity instead of UserValue)
 
